# spmv

./: .clangd  .gitignore  CMakeLists.txt  flake.nix  justfile  kernels.cu  kernels.cuh  matrix_loader.cpp  matrix_loader.h  sbatch.sh  spmv.cu
report/: d1.typ  devicequery.txt  refs.bib
